Make sure CGO is disabled

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
         run: |
           go mod tidy
           go test -v ./...
+        env:
+          CGO_ENABLED: 0
 
   release:
     needs: [build]
